show basic thumbnail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Vaccine Passport</string>
+    <string name="update_image">Update Image</string>
 </resources>
