--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Vaccine Passport</string>
+    <string name="main_title">Proof of Vaccination</string>
     <string name="update_image">Update Image</string>
 </resources>
